Uso use reducer

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "manejo-estado-ract",
+  "name": "manejo-estado-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
